[gd_scene load_steps=2 format=3 uid="uid://c2jllfue03nkn"]

[ext_resource type="Script" path="res://scripts/score_display.gd" id="1_e4p7e"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_e4p7e")

[node name="score_container" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32

[node name="player_score" type="Label" parent="score_container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 64
text = "0"

[node name="enemy_score" type="Label" parent="score_container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 64
text = "0"
